@@ -5,6 +5,10 @@ Under development                       LTL3 tools 0.0.6
 
 - Major performance improvements
 
+- Fixed a bug that could lead to wrong monitors being created when
+  the propsitions used were, in part, substrings of one another, e.g.
+  m, mt, pmt, etc.
+
 Fri Dec 26 04:36:21 EST 2008            LTL3 tools 0.0.5
 
 - Fixed a bug in the minimisation algorithm which would not minimise
